Change List.of into ArrayList