@@ -1,6 +1,7 @@
 package inspector;
 
 import inspector.primitiveArray.PrimitiveArrayInspection;
+import tools.Vector;
 
 import java.lang.reflect.Field;
 import java.util.*;
@@ -41,8 +42,7 @@ public class Inspections {
   }
 
 
-  private static final List<Class> primitiveClasses =
-    List.of(Double.class, Integer.class, Float.class, Long.class, Boolean.class, Character.class);
+  private static final List<Class> primitiveClasses = new ArrayList<Class>(Arrays.asList(Double.class, Integer.class, Float.class, Long.class, Boolean.class, Character.class));
 
   static boolean isPrimitive(Class<?> subClass) {
     return subClass.isPrimitive()
